Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Kịch bản để Ngoại hạng Anh có bảy đội dự Champions League",
+    "content": "Ngoại hạng Anh có khả năng cử bảy đội tham gia Champions League mùa tới, nhờ vào thành tích cao trong bảng điểm hệ số UEFA. Hiện tại, bóng đá Anh đang dẫn đầu với 24.175 điểm. Kịch bản này sẽ xảy ra nếu Arsenal hoặc Aston Villa giành chức vô địch Champions League và Man Utd hoặc Tottenham thắng Europa League mà không lọt vào top 5 Ngoại hạng Anh. Điều này có thể giúp Ngoại hạng Anh tăng số lượng đội tham dự giải đấu châu Âu quan trọng này.",
+    "link": "https://vnexpress.net/kich-ban-de-ngoai-hang-anh-co-bay-doi-du-champions-league-4861104.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để Ngoại hạng Anh có bảy đội dự Champions League mùa sau?",
+    "answers": [
+      {
+        "text": "Nếu Arsenal hoặc Aston Villa vô địch Champions League và Man Utd hoặc Tottenham thắng Europa League.",
+        "correct": true
+      },
+      {
+        "text": "Nếu tất cả đội bóng Anh đều vào vòng tứ kết.",
+        "correct": false
+      },
+      {
+        "text": "Nếu có thêm đội bóng từ các giải khác tham gia.",
+        "correct": false
+      },
+      {
+        "text": "Nếu UEFA thay đổi quy định về số lượng đội tham gia.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Giả thông tin 'con trai tử vong' để kêu gọi giúp đỡ",
     "content": "Một tài khoản mạng xã hội đã đăng tải thông tin sai lệch về việc 'con trai Huỳnh Hữu Đức' đã tử vong khi điều trị tại Bệnh viện Nhi đồng 2, kèm theo số tài khoản để kêu gọi hỗ trợ tài chính. Tuy nhiên, bệnh viện đã xác nhận không có bệnh nhi nào mang tên này và cảnh báo mọi người cần thận trọng trước các thông tin từ thiện không rõ nguồn gốc. Đây không phải là trường hợp đầu tiên, trước đó đã có nhiều tài khoản giả mạo thông tin bệnh nhi để kêu gọi quyên góp.",
     "link": "https://vnexpress.net/gia-thong-tin-con-trai-tu-vong-de-keu-goi-giup-do-4861129.html",
@@ -861,28 +888,28 @@
     ]
   },
   {
-    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
-    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
-    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
-    "cat": "gia-dinh",
+    "title": "Chi nửa triệu đồng một giờ để tập gym 1:1",
+    "content": "Trong bối cảnh ngày càng nhiều người tìm kiếm phương pháp tập luyện hiệu quả, nhiều người đã chuyển từ các phòng gym truyền thống sang mô hình gym private 1:1 với huấn luyện viên cá nhân. Chi phí cho mỗi buổi tập tại các phòng gym này khoảng 500.000 đồng, cao hơn so với việc mua thẻ tập tại các phòng gym lớn. Mô hình này được ưa chuộng vì sự cá nhân hóa trong quá trình tập luyện và khả năng tối ưu hóa kết quả. Tuy nhiên, vẫn có những hạn chế về chi phí và sự thiếu tương tác xã hội.",
+    "link": "https://vnexpress.net/chi-nua-trieu-dong-mot-gio-de-tap-gym-1-1-4859443.html",
+    "cat": "suc-khoe",
     "positivity": 8,
     "importance": 7,
-    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
+    "question": "Tại sao nhiều người chọn tập gym 1:1 với huấn luyện viên cá nhân?",
     "answers": [
       {
-        "text": "Chấp nhận thực tế khác với kỳ vọng",
+        "text": "Vì hiệu quả và sự cá nhân hóa trong tập luyện.",
         "correct": true
       },
       {
-        "text": "Không cho trẻ sử dụng thiết bị điện tử",
+        "text": "Vì chi phí thấp hơn so với gym truyền thống.",
         "correct": false
       },
       {
-        "text": "Luôn cứng rắn và không nhượng bộ con",
+        "text": "Vì muốn tập ở không gian đông đúc.",
         "correct": false
       },
       {
-        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
+        "text": "Vì không có thời gian để tập luyện.",
         "correct": false
       }
     ]
@@ -915,33 +942,6 @@
     ]
   },
   {
-    "title": "Chi nửa triệu đồng một giờ để tập gym 1:1",
-    "content": "Trong bối cảnh ngày càng nhiều người tìm kiếm phương pháp tập luyện hiệu quả, nhiều người đã chuyển từ các phòng gym truyền thống sang mô hình gym private 1:1 với huấn luyện viên cá nhân. Chi phí cho mỗi buổi tập tại các phòng gym này khoảng 500.000 đồng, cao hơn so với việc mua thẻ tập tại các phòng gym lớn. Mô hình này được ưa chuộng vì sự cá nhân hóa trong quá trình tập luyện và khả năng tối ưu hóa kết quả. Tuy nhiên, vẫn có những hạn chế về chi phí và sự thiếu tương tác xã hội.",
-    "link": "https://vnexpress.net/chi-nua-trieu-dong-mot-gio-de-tap-gym-1-1-4859443.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao nhiều người chọn tập gym 1:1 với huấn luyện viên cá nhân?",
-    "answers": [
-      {
-        "text": "Vì hiệu quả và sự cá nhân hóa trong tập luyện.",
-        "correct": true
-      },
-      {
-        "text": "Vì chi phí thấp hơn so với gym truyền thống.",
-        "correct": false
-      },
-      {
-        "text": "Vì muốn tập ở không gian đông đúc.",
-        "correct": false
-      },
-      {
-        "text": "Vì không có thời gian để tập luyện.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "'Quả bom' dân số già của Malaysia",
     "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
     "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
@@ -968,6 +968,33 @@
       },
       {
         "text": "Chăm sóc trẻ em",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
+    "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
+    "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những điều gì phụ huynh cần chấp nhận trong việc nuôi dạy con?",
+    "answers": [
+      {
+        "text": "Chấp nhận thực tế khác với kỳ vọng",
+        "correct": true
+      },
+      {
+        "text": "Không cho trẻ sử dụng thiết bị điện tử",
+        "correct": false
+      },
+      {
+        "text": "Luôn cứng rắn và không nhượng bộ con",
+        "correct": false
+      },
+      {
+        "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
         "correct": false
       }
     ]
@@ -1897,33 +1924,6 @@
     ]
   },
   {
-    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
-    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
-    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
-    "answers": [
-      {
-        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
-        "correct": true
-      },
-      {
-        "text": "Vì tiêm vaccine là bắt buộc.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm cân.",
-        "correct": false
-      },
-      {
-        "text": "Vaccine HPV chỉ dành cho nam giới.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mặt mưng mủ sau cấy mỡ tạo 'má baby'",
     "content": "Một phụ nữ 35 tuổi đã gặp phải tình trạng nhiễm trùng và mủ sau khi cấy mỡ tự thân vào má tại một spa. Các bác sĩ tại Bệnh viện Bạch Mai đã chẩn đoán và điều trị bằng kháng sinh cùng với việc dẫn lưu dịch mủ. Cơ sở y tế khuyến cáo mọi người chỉ nên thực hiện các thủ thuật thẩm mỹ tại những nơi được cấp phép để tránh nguy cơ biến chứng nguy hiểm.",
     "link": "https://vnexpress.net/mat-mung-mu-sau-cay-mo-tao-ma-baby-4860892.html",
@@ -1946,6 +1946,33 @@
       },
       {
         "text": "Vì cần phải nghỉ ngơi sau khi làm đẹp.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hiểu nhầm về tiêm vaccine HPV cho nữ giới",
+    "content": "Bài viết làm rõ những hiểu nhầm phổ biến về tiêm vaccine HPV cho nữ giới. Nhiều người cho rằng chỉ cần quan hệ chung thủy hoặc đã nhiễm HPV thì không cần tiêm phòng, nhưng thực tế virus HPV có thể lây qua nhiều cách và có nhiều chủng khác nhau. Bác sĩ khuyến cáo rằng việc tiêm vaccine HPV là rất quan trọng để phòng ngừa các bệnh liên quan và nên được thực hiện càng sớm càng tốt, đặc biệt cho nữ giới từ 27 tuổi trở lên.",
+    "link": "https://vnexpress.net/hieu-nham-ve-tiem-vaccine-hpv-cho-nu-gioi-4860700.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao nữ giới nên tiêm vaccine HPV?",
+    "answers": [
+      {
+        "text": "Để phòng ngừa nhiễm virus HPV và các bệnh liên quan.",
+        "correct": true
+      },
+      {
+        "text": "Vì tiêm vaccine là bắt buộc.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm cân.",
+        "correct": false
+      },
+      {
+        "text": "Vaccine HPV chỉ dành cho nam giới.",
         "correct": false
       }
     ]
@@ -2090,33 +2117,6 @@
     ]
   },
   {
-    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
-    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
-    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
-    "answers": [
-      {
-        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
-        "correct": true
-      },
-      {
-        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
-        "correct": false
-      },
-      {
-        "text": "Vì ông không đủ điều kiện tài chính",
-        "correct": false
-      },
-      {
-        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
     "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
     "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
@@ -2139,6 +2139,33 @@
       },
       {
         "text": "Ngân hàng Phát triển Châu Á",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ronaldo bị hắt hủi trong cuộc đua Chủ tịch",
+    "content": "Cựu danh thủ Ronaldo Nazario đã rút lui khỏi cuộc đua tranh chức Chủ tịch LĐBĐ Brazil (CBF) do không nhận được sự ủng hộ từ các địa phương. Mặc dù ông đã tuyên bố tranh cử từ tháng 12/2024 với mong muốn khôi phục uy tín cho bóng đá Brazil, nhưng chỉ có 4 trong 27 Liên đoàn địa phương ủng hộ ông. Với quyết định này, Rodrigues có khả năng trở thành ứng cử viên duy nhất trong cuộc bầu cử sắp tới.",
+    "link": "https://vnexpress.net/ronaldo-bi-hat-hui-trong-cuoc-dua-chu-tich-4860872.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao Ronaldo Nazario rút lui khỏi cuộc đua Chủ tịch LĐBĐ Brazil?",
+    "answers": [
+      {
+        "text": "Vì không được các Liên đoàn địa phương ủng hộ",
+        "correct": true
+      },
+      {
+        "text": "Vì ông muốn tập trung vào sự nghiệp cầu thủ",
+        "correct": false
+      },
+      {
+        "text": "Vì ông không đủ điều kiện tài chính",
+        "correct": false
+      },
+      {
+        "text": "Vì ông đã đạt được nhiều thành công trong sự nghiệp",
         "correct": false
       }
     ]
@@ -2986,33 +3013,6 @@
     ]
   },
   {
-    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
-    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
-    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 9,
-    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
-    "answers": [
-      {
-        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
-        "correct": false
-      },
-      {
-        "text": "Không có tác động đến sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "ENT Masterclass lần đầu đào tạo tai mũi họng và phẫu thuật cổ tại Việt Nam",
     "content": "Hội nghị ENT Masterclass lần đầu tiên được tổ chức tại Việt Nam sẽ diễn ra vào ngày 31/3 và 1/4 tại Bệnh viện Đa khoa Hồng Ngọc. Sự kiện này quy tụ 33 bài báo cáo chuyên sâu về tai mũi họng và phẫu thuật cổ, với sự tham gia của các chuyên gia hàng đầu quốc tế và trong nước. Mục tiêu của hội nghị là nâng cao trình độ chuyên môn cho các bác sĩ Việt Nam và kết nối cộng đồng y khoa toàn cầu.",
     "link": "https://vnexpress.net/ent-masterclass-lan-dau-dao-tao-tai-mui-hong-va-phau-thuat-co-tai-viet-nam-4860526.html",
@@ -3039,6 +3039,33 @@
       },
       {
         "text": "29/3 và 30/3",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
+    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 9,
+    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
+    "answers": [
+      {
+        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
+        "correct": false
+      },
+      {
+        "text": "Không có tác động đến sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
         "correct": false
       }
     ]
@@ -4627,33 +4654,6 @@
       },
       {
         "text": "Corolla",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thai nhi mắc cùng lúc hai đột biến gene",
-    "content": "Một thai nhi 13 tuần tuổi đã được phát hiện có hai đột biến gene FOXC2 và RAF1, liên quan đến hội chứng Noonan và phù bạch huyết. Thai nhi có dấu hiệu phù da, độ mờ da gáy dày và các nang bạch huyết. Sau khi tiến hành sinh thiết gai nhau, bác sĩ đã tư vấn cho gia đình nhưng thai phụ không đồng ý xét nghiệm di truyền cho bố mẹ. Tình trạng thai nhi xấu đi và gia đình đã quyết định đình chỉ thai kỳ ở tuần 15.",
-    "link": "https://vnexpress.net/thai-nhi-mac-cung-luc-hai-dot-bien-gene-4860591.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Thai nhi mắc hai đột biến gene FOXC2 và RAF1 có ảnh hưởng gì không?",
-    "answers": [
-      {
-        "text": "Có, thai nhi có thể gặp nhiều vấn đề sức khỏe nghiêm trọng.",
-        "correct": true
-      },
-      {
-        "text": "Không, điều này không ảnh hưởng đến sức khỏe của thai nhi.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng nhẹ đến sức khỏe của thai nhi.",
-        "correct": false
-      },
-      {
-        "text": "Không có ảnh hưởng gì đến sự phát triển của thai nhi.",
         "correct": false
       }
     ]
