Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Các tác dụng phụ khi tránh thai",
+    "content": "Bài viết cung cấp thông tin về các tác dụng phụ có thể gặp phải khi sử dụng các biện pháp tránh thai như đau đầu, buồn nôn, rối loạn chu kỳ kinh nguyệt, và nổi mụn trứng cá. Những tác dụng phụ này có thể khác nhau tùy thuộc vào phương pháp tránh thai được sử dụng, bao gồm thuốc tránh thai, vòng tránh thai, và bao cao su. Phụ nữ nên chú ý đến những triệu chứng này và tìm kiếm sự tư vấn từ bác sĩ nếu cần.",
+    "link": "https://vnexpress.net/cac-tac-dung-phu-khi-tranh-thai-4860925.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Các tác dụng phụ khi tránh thai là gì?",
+    "answers": [
+      {
+        "text": "Đau đầu, buồn nôn, rối loạn chu kỳ kinh nguyệt",
+        "correct": true
+      },
+      {
+        "text": "Tăng cân",
+        "correct": false
+      },
+      {
+        "text": "Giảm ham muốn tình dục",
+        "correct": false
+      },
+      {
+        "text": "Mất ngủ",
+        "correct": false
+      },
+      {
+        "text": "Không có tác dụng phụ nào",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Kịch bản để Ngoại hạng Anh có bảy đội dự Champions League",
     "content": "Ngoại hạng Anh có khả năng cử bảy đội tham gia Champions League mùa tới, nhờ vào thành tích cao trong bảng điểm hệ số UEFA. Hiện tại, bóng đá Anh đang dẫn đầu với 24.175 điểm. Kịch bản này sẽ xảy ra nếu Arsenal hoặc Aston Villa giành chức vô địch Champions League và Man Utd hoặc Tottenham thắng Europa League mà không lọt vào top 5 Ngoại hạng Anh. Điều này có thể giúp Ngoại hạng Anh tăng số lượng đội tham dự giải đấu châu Âu quan trọng này.",
     "link": "https://vnexpress.net/kich-ban-de-ngoai-hang-anh-co-bay-doi-du-champions-league-4861104.html",
@@ -592,6 +623,33 @@
     ]
   },
   {
+    "title": "Chi nửa triệu đồng một giờ để tập gym 1:1",
+    "content": "Trong bối cảnh ngày càng nhiều người tìm kiếm phương pháp tập luyện hiệu quả, nhiều người đã chuyển từ các phòng gym truyền thống sang mô hình gym private 1:1 với huấn luyện viên cá nhân. Chi phí cho mỗi buổi tập tại các phòng gym này khoảng 500.000 đồng, cao hơn so với việc mua thẻ tập tại các phòng gym lớn. Mô hình này được ưa chuộng vì sự cá nhân hóa trong quá trình tập luyện và khả năng tối ưu hóa kết quả. Tuy nhiên, vẫn có những hạn chế về chi phí và sự thiếu tương tác xã hội.",
+    "link": "https://vnexpress.net/chi-nua-trieu-dong-mot-gio-de-tap-gym-1-1-4859443.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao nhiều người chọn tập gym 1:1 với huấn luyện viên cá nhân?",
+    "answers": [
+      {
+        "text": "Vì hiệu quả và sự cá nhân hóa trong tập luyện.",
+        "correct": true
+      },
+      {
+        "text": "Vì chi phí thấp hơn so với gym truyền thống.",
+        "correct": false
+      },
+      {
+        "text": "Vì muốn tập ở không gian đông đúc.",
+        "correct": false
+      },
+      {
+        "text": "Vì không có thời gian để tập luyện.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "'Quả bom' dân số già của Malaysia",
     "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
     "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
@@ -618,33 +676,6 @@
       },
       {
         "text": "Chăm sóc trẻ em",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chi nửa triệu đồng một giờ để tập gym 1:1",
-    "content": "Trong bối cảnh ngày càng nhiều người tìm kiếm phương pháp tập luyện hiệu quả, nhiều người đã chuyển từ các phòng gym truyền thống sang mô hình gym private 1:1 với huấn luyện viên cá nhân. Chi phí cho mỗi buổi tập tại các phòng gym này khoảng 500.000 đồng, cao hơn so với việc mua thẻ tập tại các phòng gym lớn. Mô hình này được ưa chuộng vì sự cá nhân hóa trong quá trình tập luyện và khả năng tối ưu hóa kết quả. Tuy nhiên, vẫn có những hạn chế về chi phí và sự thiếu tương tác xã hội.",
-    "link": "https://vnexpress.net/chi-nua-trieu-dong-mot-gio-de-tap-gym-1-1-4859443.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao nhiều người chọn tập gym 1:1 với huấn luyện viên cá nhân?",
-    "answers": [
-      {
-        "text": "Vì hiệu quả và sự cá nhân hóa trong tập luyện.",
-        "correct": true
-      },
-      {
-        "text": "Vì chi phí thấp hơn so với gym truyền thống.",
-        "correct": false
-      },
-      {
-        "text": "Vì muốn tập ở không gian đông đúc.",
-        "correct": false
-      },
-      {
-        "text": "Vì không có thời gian để tập luyện.",
         "correct": false
       }
     ]
@@ -1821,33 +1852,6 @@
     ]
   },
   {
-    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
-    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
-    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
-    "answers": [
-      {
-        "text": "Bank Negara Indonesia (BNI)",
-        "correct": true
-      },
-      {
-        "text": "Ngân hàng Trung ương Indonesia",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Thế giới",
-        "correct": false
-      },
-      {
-        "text": "Ngân hàng Phát triển Châu Á",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Amorim: 'Man Utd bị Ratcliffe chê là đúng'",
     "content": "HLV Ruben Amorim của Man Utd đã thừa nhận rằng ông và đội bóng không đạt phong độ tốt trong mùa giải này, sau khi bị đồng sở hữu Jim Ratcliffe chỉ trích. Ratcliffe cho rằng nhiều cầu thủ của Man Utd nhận lương cao nhưng không đủ chất lượng để thi đấu hiệu quả. Amorim cũng cho biết ông không phàn nàn về những bình luận của Ratcliffe và cam kết sẽ cải thiện kết quả của đội bóng.",
     "link": "https://vnexpress.net/amorim-man-utd-bi-ratcliffe-che-la-dung-4860857.html",
@@ -1870,6 +1874,33 @@
       },
       {
         "text": "Ông khẳng định rằng Man Utd đang có phong độ tốt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "VinFast và ngân hàng Indonesia thúc đẩy giao thông điện hóa",
+    "content": "VinFast, hãng xe điện Việt Nam, đã ký kết hợp tác với ngân hàng Bank Negara Indonesia (BNI) để phát triển hệ sinh thái xe điện tại Indonesia. Lễ ký kết diễn ra trong khuôn khổ buổi đối thoại kinh doanh Việt Nam – Indonesia, với mục tiêu thúc đẩy chuyển đổi sang xe xanh và phát triển bền vững. BNI sẽ hỗ trợ VinFast trong việc cung cấp các giải pháp tài chính và tư vấn nhằm khuyến khích người dân Indonesia sử dụng xe điện. Cả hai bên đều cam kết triển khai các chiến dịch nâng cao nhận thức về giao thông xanh và phát triển các sản phẩm xe điện tại thị trường này.",
+    "link": "https://vnexpress.net/vinfast-va-ngan-hang-indonesia-thuc-day-giao-thong-dien-hoa-4861020.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "VinFast và ngân hàng nào đã ký hợp tác để phát triển giao thông điện hóa tại Indonesia?",
+    "answers": [
+      {
+        "text": "Bank Negara Indonesia (BNI)",
+        "correct": true
+      },
+      {
+        "text": "Ngân hàng Trung ương Indonesia",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Thế giới",
+        "correct": false
+      },
+      {
+        "text": "Ngân hàng Phát triển Châu Á",
         "correct": false
       }
     ]
@@ -2717,33 +2748,6 @@
     ]
   },
   {
-    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
-    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
-    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 9,
-    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
-    "answers": [
-      {
-        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
-        "correct": false
-      },
-      {
-        "text": "Không có tác động đến sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "ENT Masterclass lần đầu đào tạo tai mũi họng và phẫu thuật cổ tại Việt Nam",
     "content": "Hội nghị ENT Masterclass lần đầu tiên được tổ chức tại Việt Nam sẽ diễn ra vào ngày 31/3 và 1/4 tại Bệnh viện Đa khoa Hồng Ngọc. Sự kiện này quy tụ 33 bài báo cáo chuyên sâu về tai mũi họng và phẫu thuật cổ, với sự tham gia của các chuyên gia hàng đầu quốc tế và trong nước. Mục tiêu của hội nghị là nâng cao trình độ chuyên môn cho các bác sĩ Việt Nam và kết nối cộng đồng y khoa toàn cầu.",
     "link": "https://vnexpress.net/ent-masterclass-lan-dau-dao-tao-tai-mui-hong-va-phau-thuat-co-tai-viet-nam-4860526.html",
@@ -2770,6 +2774,33 @@
       },
       {
         "text": "29/3 và 30/3",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
+    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 9,
+    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
+    "answers": [
+      {
+        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
+        "correct": false
+      },
+      {
+        "text": "Không có tác động đến sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
         "correct": false
       }
     ]
@@ -4153,33 +4184,6 @@
       },
       {
         "text": "Không xây dựng đúng quy hoạch",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đề xuất làm công viên điện ảnh Thủ Thiêm bên sông Sài Gòn",
-    "content": "Đề xuất xây dựng công viên điện ảnh Thủ Thiêm bên sông Sài Gòn vừa được giới thiệu với 7 phân khu trên diện tích khoảng 5 ha, nhằm tạo điểm đến văn hóa và du lịch tại TP HCM. Công viên bao gồm các khu vực như phim trường, bảo tàng điện ảnh, khu thương mại và sân khấu sự kiện. Dự án được phát triển theo ba giai đoạn, với mục tiêu tái hiện bối cảnh Sài Gòn đầu thế kỷ 20 và nâng cao trải nghiệm du lịch văn hóa tại khu vực trung tâm.",
-    "link": "https://vnexpress.net/de-xuat-lam-cong-vien-dien-anh-thu-thiem-ben-song-sai-gon-4860704.html",
-    "cat": "du-lich",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Công viên điện ảnh Thủ Thiêm sẽ được xây dựng ở đâu?",
-    "answers": [
-      {
-        "text": "Bên sông Sài Gòn",
-        "correct": true
-      },
-      {
-        "text": "Gần cầu Bạch Đằng",
-        "correct": false
-      },
-      {
-        "text": "Trong khu phố đi bộ Nguyễn Huệ",
-        "correct": false
-      },
-      {
-        "text": "Tại công viên Tao Đàn",
         "correct": false
       }
     ]
