--- a/home.html
+++ b/home.html
@@ -148,6 +148,60 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Luật sư tiết lộ những công việc dễ ngoại tình ở Mỹ",
+    "content": "Kate Simonds, một luật sư có 15 năm kinh nghiệm tư vấn ly hôn, chỉ ra rằng nhân viên cảnh sát, lính cứu hỏa và quân nhân là những nghề có nguy cơ ngoại tình cao ở Mỹ do tính chất công việc thường xuyên xa nhà và tiếp xúc với nhiều người. Ngược lại, những nghề như kế toán, nông dân và dược sĩ được đánh giá là có xu hướng chung thủy hơn. Kate cũng nhấn mạnh rằng môi trường làm việc và lối sống có thể ảnh hưởng đến sự chung thủy trong hôn nhân và đưa ra một số dấu hiệu nhận biết sự không chung thủy trong mối quan hệ.",
+    "link": "https://vnexpress.net/luat-su-tiet-lo-nhung-cong-viec-de-ngoai-tinh-o-my-4861262.html",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Những nghề nào dễ dẫn đến ngoại tình theo luật sư Kate Simonds?",
+    "answers": [
+      {
+        "text": "Nhân viên cảnh sát, lính cứu hỏa, quân nhân",
+        "correct": true
+      },
+      {
+        "text": "Kế toán, nông dân, dược sĩ",
+        "correct": false
+      },
+      {
+        "text": "Giáo viên, bác sĩ, kỹ sư",
+        "correct": false
+      },
+      {
+        "text": "Chuyên viên marketing, nhà báo, lập trình viên",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Man Utd bị chỉ trích vì dự án xây 'New Trafford'",
+    "content": "Man Utd đang đối mặt với sự chỉ trích từ các cựu cầu thủ như Paul Merson và Roy Keane vì quyết định xây dựng sân vận động mới trị giá 2,58 tỷ USD, trong khi đội bóng vẫn đang thiếu danh hiệu. Họ cho rằng việc đầu tư vào sân mới là không hợp lý khi Man Utd có một trong những sân lớn nhất Ngoại hạng Anh và cần tập trung vào việc nâng cấp đội hình. Dự án này dự kiến sẽ tạo ra 92.000 việc làm mới và thu hút thêm du khách, nhưng cũng gây lo ngại về cách quản lý tài chính của CLB.",
+    "link": "https://vnexpress.net/man-utd-bi-chi-trich-vi-du-an-xay-new-trafford-4861089.html",
+    "cat": "the-thao",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao Man Utd bị chỉ trích trong dự án xây dựng sân mới?",
+    "answers": [
+      {
+        "text": "Vì họ đang thiếu danh hiệu và nên đầu tư vào đội hình.",
+        "correct": true
+      },
+      {
+        "text": "Vì sân mới không đủ chỗ ngồi.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không có kế hoạch cụ thể cho tài chính.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ đã sa thải nhiều nhân viên trước đó.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cá ngừ Việt Nam sang Anh tăng trưởng 'bậc thang'",
     "content": "Giá trị xuất khẩu cá ngừ Việt Nam sang Anh đã tăng từ 5,1 triệu USD năm 2021 lên gần 8 triệu USD năm 2024, và chỉ trong 2 tháng đầu năm 2025, tăng 24% so với cùng kỳ năm ngoái. Sự tăng trưởng này được lý giải nhờ các hiệp định thương mại tự do, như UKVFTA và CPTPP, giúp giảm thuế cho sản phẩm cá ngừ. Cá ngừ hiện là một trong những loại thực phẩm được ưa chuộng tại Anh, đặc biệt trong các món ăn nhanh.",
     "link": "https://tuoitre.vn/ca-ngu-viet-nam-sang-anh-tang-truong-bac-thang-20250314093251476.htm",
@@ -1276,6 +1330,37 @@
     ]
   },
   {
+    "title": "'Quả bom' dân số già của Malaysia",
+    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
+    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
+    "answers": [
+      {
+        "text": "Già hóa dân số",
+        "correct": true
+      },
+      {
+        "text": "Tỷ lệ sinh tăng",
+        "correct": false
+      },
+      {
+        "text": "Thiếu lao động trẻ",
+        "correct": false
+      },
+      {
+        "text": "Gia tăng tỷ lệ thất nghiệp",
+        "correct": false
+      },
+      {
+        "text": "Chăm sóc trẻ em",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những điều \"ngược đời\" trong việc nuôi dạy con từ góc nhìn chuyên gia",
     "content": "Bài viết đề cập đến những điều \"ngược đời\" trong việc nuôi dạy con mà phụ huynh cần chấp nhận để có một hành trình nuôi dưỡng suôn sẻ hơn. Chuyên gia tâm lý Naomi Fisher khuyên rằng cha mẹ nên chấp nhận thực tế khác với kỳ vọng, nhượng bộ trong những chuyện nhỏ, và tìm hiểu về thế giới trực tuyến của con. Hơn nữa, sự hài hước cũng đóng vai trò quan trọng trong việc tạo ra không khí gia đình vui vẻ và hòa thuận, giúp trẻ dễ dàng tiếp nhận ý kiến của cha mẹ hơn.",
     "link": "https://dantri.com.vn/giao-duc/nhung-dieu-nguoc-doi-trong-viec-nuoi-day-con-tu-goc-nhin-chuyen-gia-20250313151734224.htm",
@@ -1298,33 +1383,6 @@
       },
       {
         "text": "Kiểm soát hoàn toàn mọi hoạt động của trẻ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tài xế 73 tuổi vẫn lái xe dù bị tước bằng lái 92 năm",
-    "content": "Tài xế 73 tuổi Garry William Nipperess ở Australia đã bị bắt vì lái xe dù bị tước bằng lái trong thời gian dài, với lệnh cấm lái xe cho đến năm 2117. Ông Nipperess đã vi phạm lệnh cấm này lần thứ ba trong 5 năm, và trước đó đã bị kết án 10 tháng tù vào năm 2023 vì cùng một tội danh. Luật pháp New South Wales quy định hình phạt nghiêm khắc cho hành vi này, với khả năng bị phạt tiền và tù giam.",
-    "link": "https://vnexpress.net/tai-xe-73-tuoi-van-lai-xe-du-bi-tuoc-bang-lai-92-nam-4860731.html",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 7,
-    "question": "Tại sao tài xế 73 tuổi Garry Nipperess lại bị bắt?",
-    "answers": [
-      {
-        "text": "Vì lái xe khi bị tước bằng lái",
-        "correct": true
-      },
-      {
-        "text": "Vì vi phạm quy định giao thông khác",
-        "correct": false
-      },
-      {
-        "text": "Vì không có bảo hiểm xe",
-        "correct": false
-      },
-      {
-        "text": "Vì lái xe trong tình trạng say xỉn",
         "correct": false
       }
     ]
@@ -1357,32 +1415,28 @@
     ]
   },
   {
-    "title": "'Quả bom' dân số già của Malaysia",
-    "content": "Malaysia đang đối mặt với vấn đề dân số già hóa khi tỷ lệ người từ 65 tuổi trở lên đã đạt 8,1% vào năm ngoái và có thể lên tới 14,5% vào năm 2040, sớm hơn dự báo. Điều này đặt ra thách thức lớn về nhu cầu chăm sóc người cao tuổi, khi mà số lượng người đang chăm sóc họ ngày càng giảm, trong khi cơ sở hạ tầng y tế và hỗ trợ xã hội lại không đủ đáp ứng. Các chuyên gia cảnh báo rằng nếu không có sự chuẩn bị và thay đổi chính sách kịp thời, tình trạng này sẽ trở nên nghiêm trọng hơn trong tương lai.",
-    "link": "https://vnexpress.net/qua-bom-dan-so-gia-cua-malaysia-4860748.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Malaysia đang phải đối mặt với vấn đề gì liên quan đến dân số?",
+    "title": "Tài xế 73 tuổi vẫn lái xe dù bị tước bằng lái 92 năm",
+    "content": "Tài xế 73 tuổi Garry William Nipperess ở Australia đã bị bắt vì lái xe dù bị tước bằng lái trong thời gian dài, với lệnh cấm lái xe cho đến năm 2117. Ông Nipperess đã vi phạm lệnh cấm này lần thứ ba trong 5 năm, và trước đó đã bị kết án 10 tháng tù vào năm 2023 vì cùng một tội danh. Luật pháp New South Wales quy định hình phạt nghiêm khắc cho hành vi này, với khả năng bị phạt tiền và tù giam.",
+    "link": "https://vnexpress.net/tai-xe-73-tuoi-van-lai-xe-du-bi-tuoc-bang-lai-92-nam-4860731.html",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 7,
+    "question": "Tại sao tài xế 73 tuổi Garry Nipperess lại bị bắt?",
     "answers": [
       {
-        "text": "Già hóa dân số",
+        "text": "Vì lái xe khi bị tước bằng lái",
         "correct": true
       },
       {
-        "text": "Tỷ lệ sinh tăng",
+        "text": "Vì vi phạm quy định giao thông khác",
         "correct": false
       },
       {
-        "text": "Thiếu lao động trẻ",
+        "text": "Vì không có bảo hiểm xe",
         "correct": false
       },
       {
-        "text": "Gia tăng tỷ lệ thất nghiệp",
-        "correct": false
-      },
-      {
-        "text": "Chăm sóc trẻ em",
+        "text": "Vì lái xe trong tình trạng say xỉn",
         "correct": false
       }
     ]
@@ -2312,33 +2366,6 @@
     ]
   },
   {
-    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
-    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
-    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 9,
-    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
-    "answers": [
-      {
-        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
-        "correct": true
-      },
-      {
-        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
-        "correct": false
-      },
-      {
-        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
-        "correct": false
-      },
-      {
-        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 dưỡng chất tăng miễn dịch trẻ nên ăn mỗi ngày",
     "content": "Bài viết nêu bật bốn dưỡng chất quan trọng giúp tăng cường hệ miễn dịch cho trẻ, bao gồm kẽm, vitamin C, chất chống oxy hóa và axit béo omega-3. Những dưỡng chất này giúp trẻ phát triển tốt, giảm nguy cơ mắc bệnh, đặc biệt là khi thời tiết thay đổi. Cha mẹ được khuyến khích cho trẻ ăn đa dạng thực phẩm chứa các chất dinh dưỡng này để hỗ trợ sức khỏe và đề kháng của trẻ.",
     "link": "https://vnexpress.net/4-duong-chat-tang-mien-dich-tre-nen-an-moi-ngay-4860801.html",
@@ -2388,6 +2415,33 @@
       },
       {
         "text": "Vaccine HPV chỉ dành cho nam giới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Người suy thận độ 3, 4 nên ăn uống thế nào?",
+    "content": "Bài viết cung cấp thông tin về chế độ dinh dưỡng cho người suy thận độ 3 và 4, nhấn mạnh rằng chế độ ăn uống của hai bệnh nhân này cần được điều chỉnh khác nhau. Người suy thận độ 3 có thể ăn uống thoải mái hơn, nhưng vẫn cần giảm đạm, muối và theo dõi sức khỏe. Ngược lại, người suy thận độ 4 cần tuân thủ chế độ ăn nghiêm ngặt hơn, bao gồm kiêng khem nhiều thực phẩm chứa kali và nước để tránh tình trạng nguy hiểm như tăng kali máu.",
+    "link": "https://vnexpress.net/nguoi-suy-than-do-3-4-nen-an-uong-the-nao-4860941.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Người suy thận độ 3 và 4 nên ăn uống như thế nào?",
+    "answers": [
+      {
+        "text": "Người suy thận độ 3 có chế độ ăn thoải mái hơn, trong khi người suy thận độ 4 cần kiêng khem nghiêm ngặt hơn.",
+        "correct": true
+      },
+      {
+        "text": "Người suy thận độ 3 và 4 có thể ăn chung thực đơn.",
+        "correct": false
+      },
+      {
+        "text": "Cả hai cần ăn nhiều thực phẩm chứa kali và nước.",
+        "correct": false
+      },
+      {
+        "text": "Người suy thận độ 4 nên ăn nhiều trái cây và rau quả.",
         "correct": false
       }
     ]
@@ -3401,6 +3455,33 @@
     ]
   },
   {
+    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
+    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 9,
+    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
+    "answers": [
+      {
+        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
+        "correct": false
+      },
+      {
+        "text": "Không có tác động đến sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "ENT Masterclass lần đầu đào tạo tai mũi họng và phẫu thuật cổ tại Việt Nam",
     "content": "Hội nghị ENT Masterclass lần đầu tiên được tổ chức tại Việt Nam sẽ diễn ra vào ngày 31/3 và 1/4 tại Bệnh viện Đa khoa Hồng Ngọc. Sự kiện này quy tụ 33 bài báo cáo chuyên sâu về tai mũi họng và phẫu thuật cổ, với sự tham gia của các chuyên gia hàng đầu quốc tế và trong nước. Mục tiêu của hội nghị là nâng cao trình độ chuyên môn cho các bác sĩ Việt Nam và kết nối cộng đồng y khoa toàn cầu.",
     "link": "https://vnexpress.net/ent-masterclass-lan-dau-dao-tao-tai-mui-hong-va-phau-thuat-co-tai-viet-nam-4860526.html",
@@ -3427,33 +3508,6 @@
       },
       {
         "text": "29/3 và 30/3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Điều gì xảy ra nếu ngưng thở khi ngủ kéo dài?",
-    "content": "Ngưng thở khi ngủ kéo dài có thể dẫn đến nhiều vấn đề sức khỏe nghiêm trọng. Người mắc chứng này thường cảm thấy mệt mỏi, buồn ngủ vào ban ngày và có nguy cơ cao mắc bệnh tim, huyết áp cao, hoặc đột quỵ. Tình trạng này có thể làm suy yếu hệ miễn dịch, tăng nguy cơ mắc hội chứng chuyển hóa và ảnh hưởng đến sức khỏe tâm thần. Nếu không được kiểm soát, ngưng thở khi ngủ có thể gây ra các biến chứng nghiêm trọng về sức khỏe.",
-    "link": "https://vnexpress.net/dieu-gi-xay-ra-neu-ngung-tho-khi-ngu-keo-dai-4860762.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 9,
-    "question": "Ngưng thở khi ngủ kéo dài có thể gây ra những vấn đề sức khỏe nào?",
-    "answers": [
-      {
-        "text": "Mệt mỏi, buồn ngủ ban ngày và tăng nguy cơ bệnh tim",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây ra triệu chứng nhẹ và không nghiêm trọng",
-        "correct": false
-      },
-      {
-        "text": "Không có tác động đến sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến giấc ngủ mà thôi",
         "correct": false
       }
     ]
@@ -4370,33 +4424,6 @@
       },
       {
         "text": "Ngũ cốc nguyên hạt",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hàn Quốc truy tố phi công thả nhầm bom vào khu dân cư",
-    "content": "Hai phi công không quân Hàn Quốc đã bị truy tố sau vụ thả nhầm 8 quả bom xuống khu dân cư, gây thương tích cho 29 người và thiệt hại lớn về tài sản. Vụ việc xảy ra trong buổi huấn luyện vào ngày 6 tháng 3 tại Pocheon, gần biên giới Triều Tiên. Cơ quan Điều tra Hình sự của Bộ Quốc phòng cho biết lỗi nhập tọa độ sai là nguyên nhân chính gây ra sự cố.",
-    "link": "https://dantri.com.vn/the-gioi/han-quoc-truy-to-phi-cong-tha-nham-bom-vao-khu-dan-cu-20250313111954107.htm",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Vì sao hai phi công Hàn Quốc bị truy tố?",
-    "answers": [
-      {
-        "text": "Họ thả nhầm bom xuống khu dân cư gây thương tích cho nhiều người.",
-        "correct": true
-      },
-      {
-        "text": "Họ không thực hiện đúng quy trình huấn luyện.",
-        "correct": false
-      },
-      {
-        "text": "Họ đã vi phạm quy định an toàn bay.",
-        "correct": false
-      },
-      {
-        "text": "Họ không báo cáo sự cố kịp thời.",
         "correct": false
       }
     ]
